k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: survey-app
  labels:
    name: survey-app
